// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tour Primary 1`] = `
<body>
  <div>
    <button
      disabled=""
      type="button"
    >
      Cover
    </button>
    <div
      class="ant-tour ant-tour-primary ant-tour-placement-bottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
    >
      <div
        class="ant-tour-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tour-content"
      >
        <div
          class="ant-tour-inner"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </span>
          <div
            class="ant-tour-header"
          >
            <div
              class="ant-tour-title"
            >
              primary title
            </div>
          </div>
          <div
            class="ant-tour-description"
          >
            primary description.
          </div>
          <div
            class="ant-tour-footer"
          >
            <div
              class="ant-tour-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm ant-tour-next-btn"
                type="button"
              >
                <span>
                  Finish
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-tour-mask ant-tour-primary"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 1001; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="ant-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100vh"
              width="100vw"
              x="0"
              y="0"
            />
            <rect
              class="ant-tour-placeholder-animated"
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#ant-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
  <div>
    <div
      class="ant-tour-primary ant-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
</body>
`;

exports[`Tour basic 1`] = `
<body>
  <div>
    <div>
      <button
        type="button"
      >
        Show
      </button>
      <button
        disabled=""
        type="button"
      >
        Cover
      </button>
      <button
        disabled=""
        type="button"
      >
        Placement
      </button>
    </div>
  </div>
</body>
`;

exports[`Tour button props onClick 1`] = `
<body>
  <div>
    <span
      id="btnName"
    >
      finishButton
    </span>
    <button
      disabled=""
      type="button"
    >
      target
    </button>
  </div>
</body>
`;

exports[`Tour controlled current 1`] = `
<body>
  <div>
    <div>
      <button
        type="button"
      >
        SetCurrent
      </button>
    </div>
    <div
      class="ant-tour ant-tour-primary ant-tour-placement-bottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
    >
      <div
        class="ant-tour-content"
      >
        <div
          class="ant-tour-inner"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </span>
          <div
            class="ant-tour-header"
          >
            <div
              class="ant-tour-title"
            >
              Primary title
            </div>
          </div>
          <div
            class="ant-tour-description"
          >
            Primary description.
          </div>
          <div
            class="ant-tour-footer"
          >
            <div
              class="ant-tour-indicators"
            >
              <span
                class="ant-tour-indicator"
              />
              <span
                class="ant-tour-indicator-active ant-tour-indicator"
              />
            </div>
            <div
              class="ant-tour-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm ant-btn-background-ghost ant-tour-prev-btn"
                type="button"
              >
                <span>
                  Previous
                </span>
              </button>
              <button
                class="ant-btn ant-btn-default ant-btn-sm ant-tour-next-btn"
                type="button"
              >
                <span>
                  Finish
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-tour-mask ant-tour-primary"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 1001; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="ant-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100vh"
              width="100vw"
              x="0"
              y="0"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#ant-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
      </svg>
    </div>
  </div>
  <div>
    <div
      class="ant-tour-primary ant-tour-target-placeholder"
      style="left: 50%; top: 50%; width: 1px; height: 1px; position: fixed; pointer-events: none;"
    />
  </div>
</body>
`;

exports[`Tour custom step pre btn & next btn className & style 1`] = `
<div
  class="ant-tour ant-tour-placement-bottom"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
>
  <div
    class="ant-tour-content"
  >
    <div
      class="ant-tour-inner"
    >
      <span
        aria-label="close"
        class="anticon anticon-close ant-tour-close"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
          />
        </svg>
      </span>
      <div
        class="ant-tour-header"
      >
        <div
          class="ant-tour-title"
        >
          Show in Center
        </div>
      </div>
      <div
        class="ant-tour-description"
      >
        Here is the content of Tour.
      </div>
      <div
        class="ant-tour-footer"
      >
        <div
          class="ant-tour-indicators"
        >
          <span
            class="ant-tour-indicator-active ant-tour-indicator"
          />
          <span
            class="ant-tour-indicator"
          />
        </div>
        <div
          class="ant-tour-buttons"
        >
          <button
            class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn customClassName"
            style="background-color: rgb(69, 69, 255);"
            type="button"
          >
            <span>
              Next
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tour rtl render component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Tour single 1`] = `
<body>
  <div>
    <button
      disabled=""
      type="button"
    >
      Cover
    </button>
    <div
      class="ant-tour ant-tour-placement-bottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
    >
      <div
        class="ant-tour-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tour-content"
      >
        <div
          class="ant-tour-inner"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </span>
          <div
            class="ant-tour-header"
          >
            <div
              class="ant-tour-title"
            >
              cover title
            </div>
          </div>
          <div
            class="ant-tour-description"
          >
            cover description.
          </div>
          <div
            class="ant-tour-footer"
          >
            <div
              class="ant-tour-buttons"
            >
              <button
                class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn"
                type="button"
              >
                <span>
                  Finish
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 1001; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="ant-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100vh"
              width="100vw"
              x="0"
              y="0"
            />
            <rect
              class="ant-tour-placeholder-animated"
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#ant-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
  <div>
    <div
      class="ant-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
</body>
`;

exports[`Tour step support Primary 1`] = `
<body>
  <div>
    <button
      disabled=""
      type="button"
    >
      Cover
    </button>
    <div
      class="ant-tour ant-tour-primary ant-tour-placement-bottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
    >
      <div
        class="ant-tour-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tour-content"
      >
        <div
          class="ant-tour-inner"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </span>
          <div
            class="ant-tour-header"
          >
            <div
              class="ant-tour-title"
            >
              primary title
            </div>
          </div>
          <div
            class="ant-tour-description"
          >
            primary description.
          </div>
          <div
            class="ant-tour-footer"
          >
            <div
              class="ant-tour-indicators"
            >
              <span
                class="ant-tour-indicator"
              />
              <span
                class="ant-tour-indicator-active ant-tour-indicator"
              />
            </div>
            <div
              class="ant-tour-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm ant-btn-background-ghost ant-tour-prev-btn"
                type="button"
              >
                <span>
                  Previous
                </span>
              </button>
              <button
                class="ant-btn ant-btn-default ant-btn-sm ant-tour-next-btn"
                type="button"
              >
                <span>
                  Finish
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-tour-mask ant-tour-primary"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 1001; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="ant-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100vh"
              width="100vw"
              x="0"
              y="0"
            />
            <rect
              class="ant-tour-placeholder-animated"
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#ant-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
  <div>
    <div
      class="ant-tour-primary ant-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
</body>
`;

exports[`Tour steps is empty 1`] = `
<body>
  <div>
    <button
      disabled=""
      type="button"
    >
      Cover
    </button>
  </div>
</body>
`;

exports[`Tour steps props indicatorsRender 1`] = `
<body>
  <div>
    <button
      disabled=""
      type="button"
    >
      Cover
    </button>
  </div>
</body>
`;
